// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutLeadBlock tests should not render if no awardsAndCertificate images and document assets are provided 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-44"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              />
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no guaranteesAndWarranties assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-24"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              />
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-64"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              />
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-101 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-104"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no siderbar, keyFeatures and systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-124"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no specification asset 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              />
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should not render if no systemBenefits 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-84"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests should render 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.guaranteesWarranties
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="guaranteesAndAwardsAsset LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: pdp.leadBlock.awardsCertificates
        </h6>
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
        <img
          alt="asset-name"
          class="image"
          src="http://localhost:8000/asset-real-file-name.pdf"
        />
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              />
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutLeadBlock tests specification section move up if no guaranteesAndWarranties assets and awardsAndCertificates assets 1`] = `
<div>
  <div
    class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
    >
      <div
        class="LeadBlockContentSection"
      >
        <div
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          system-desc
        </div>
      </div>
      <div
        class="LeadBlockContentSection"
      >
        <h6
          class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h6"
        >
          MC: sdp.leadBlock.specification
        </h6>
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-161 MuiButton-outlined MuiButton-outlinedPrimary"
          data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
          href="http://localhost:8000/asset-real-file-name.pdf"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <span
            class="MuiButton-label buttonStyles-label-164"
          >
            asset-name
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
      data-testid="sidebar"
    >
      <div
        class="ColorPair ColorPair--pearl"
      >
        <div
          class="PostItCard"
        >
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              MC: sdp.leadBlock.systemBenefits
            </h4>
            <div
              class="content"
            >
              <ul
                class="IconList"
              />
            </div>
          </div>
          <div
            class="section"
          >
            <h4
              class="MuiTypography-root Typography Typography--underline MuiTypography-h4"
            >
              siderBarItem
            </h4>
            <div
              class="content"
            >
              <div
                class="RichText"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
